# hasc-project

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Readme.md  aligned_array.h  benchmark.cpp  generate_benchmark  generate_benchmark.sh  lmv_blocked.h  lmv_seq.h  lmv_sequential.h  lmv_vcl.h  local_mean_value.h  main.cpp  results.csv  results.txt  simd_selector.h  span.h  stencil.h  test.cpp  util.h
jacobi/: CMakeLists.txt  benchmark.cpp  jacobi.h  jacobi_vcl.h  main.cpp  test.cpp
lmv/: CMakeLists.txt  benchmark.cpp  benchmark_blocked.cpp  lmv_par.h  lmv_seq.h  lmv_vcl.h  main.cpp  test.cpp
seidel/: CMakeLists.txt  benchmark.cpp  main.cpp  seidel.h  seidel_inexact.h  seidel_par.h  test.cpp
